--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "chart.js": "^4.5.0",
+    "chartjs-chart-financial": "^0.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -51,13 +53,17 @@
     "google-auth-library": "^10.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "mammoth": "^1.9.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "otplib": "^12.0.1",
+    "pdfjs-dist": "^5.3.93",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
